# femtolog

./: .clang-tidy  CPPLINT.cfg  README.md  pyproject.toml  xmake.lua
.github/workflows/: ci.yml  release.yml
include/femtolog/: femtolog.h  logger.h  options.h
include/femtolog/base/: check.h  file_util.h  format_util.h  log_entry.h  log_level.h  memory_util.h  serialize_util.h  string_registry.h  string_util.h  style.h
include/femtolog/sinks/: file_sink.h  json_lines_sink.h  null_sink.h  sink_base.h  stdout_sink.h
scripts/: bench.sh  header_license.py
src/: femtolog.h  logger.cc  logger.h
src/base/: check.cc  check.h  file_util.cc  file_util.h  format_util.h  log_entry.h  log_level.h  memory_util.cc  memory_util.h  serialize_util.h  string_registry.h  string_util.cc  string_util.h
src/base/diagnostics/: signal_handler.cc  signal_handler.h  stack_trace.cc  stack_trace.h  stack_trace_entry.cc  terminate_handler.cc
src/core/base/: file_util.cc  memory_util.cc  string_util.cc
src/femtolog/: femtolog.h  logger.h
src/sinks/: file_sink.h  json_lines_sink.h  null_sink.h  sink_base.h  stdout_sink.h
tests/: args_deserializer_test.cc  args_serializer_test.cc  backend_worker_test.cc  femtolog_test.cc  internal_logger_test.cc  main.cc  spmc_queue_test.cc  spsc_queue_test.cc  string_util_test.cc
tests/benchmarks/: args_deserializer_bench.cc  args_serializer_bench.cc  backend_worker_bench.cc  benchmark_util.h  femtolog_bench.cc  format_bench.cc  g3log_bench.cc  internal_logger_bench.cc  quill_bench.cc  spdlog_bench.cc  spmc_queue_bench.cc  spsc_queue_bench.cc
(+25 files in other folders)
