[project]
name = "femtolog"
version = "0.1.0"
description = ""
authors = [{ name = "pugur", email = "pugurmc@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<2.34.0",
    "cpplint>=2.0.2,<2.1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
